# pugixml-hs

./: .ghci  .travis.yml  CHANGELOG.md  LICENSE  README.md  pugixml.cabal
Text/XML/: Pugi.hs
Text/XML/Pugi/: Const.hs  Mutable.hs
Text/XML/Pugi/Foreign/: Attr.hs  Const.hs  Document.hs  Node.hs  Types.hs  XPath.hs
Text/XML/Pugi/Foreign/XPath/: Node.hs
cbit/: wrapper.cc
pugixml-1.4/: pugiconfig.hpp
test/: test.hs
