name:                pugixml
version:             0.1.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki
maintainer:          philopon.dependence@gmail.com
-- copyright:           
category:            Text
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Text.XML.Pugi.Foreign.Const
                       Text.XML.Pugi.Foreign.Node
                       Text.XML.Pugi.Foreign.Document
                       Text.XML.Pugi.Foreign.Types
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
                     , bytestring
                     , data-default-class
  -- hs-source-dirs:      
  c-sources:           pugixml-1.4/pugixml.cpp cbit/wrapper.cc
  include-dirs:        pugixml-1.4, cbit
  ghc-options:         -Wall
  extra-libraries:     stdc++
  default-language:    Haskell2010
